--- a/index.html
+++ b/index.html
@@ -1050,33 +1050,7 @@ for (let i = 1; i <= 10; i++) {
   repsSelect.appendChild(opt);
 }
 
-tabBtns.forEach(btn => {
-  btn.addEventListener('click', ()=>{
-    calPopup.classList.add("hidden");
 
-    tabBtns.forEach(b=>b.classList.remove('active'));
-    btn.classList.add('active');
-
-    const target = btn.dataset.target;
-    tabContents.forEach(tc=>{
-      if(tc.id === target){
-        tc.classList.add('active');
-        tc.style.display = 'block';
-      } else {
-        tc.classList.remove('active');
-        tc.style.display = 'none';
-      }
-    });
-
-    // 🔥 Tip 탭 초기화
-    if(target === 'tab4'){
-      partScreen.style.display = 'block';
-      exerciseScreen.style.display = 'none';
-    }
-  });
-
-   
-});
 
 
 goBtn.addEventListener('click', ()=> {
@@ -1171,20 +1145,23 @@ const detailScreen = document.getElementById('exercise-detail-screen');
    /* ===============================
    카드 상세 열기
 ================================ */
-function openExerciseDetail(exerciseName) {
-  currentExerciseName = exerciseName;
+
+
+function openExerciseDetail(name) {
+  currentExerciseName = name;
+
+  if (!accRecordsByExercise[name]) accRecordsByExercise[name] = [];
 
   exerciseScreen.style.display = 'none';
   detailScreen.style.display = 'block';
+  document.getElementById('detail-exercise-name').textContent = name;
 
-  document.getElementById('detail-exercise-name').textContent = exerciseName;
-  renderAccessoryDetail(exerciseName);
+  renderAccessoryRecords(name); // ✅ "디테일 화면"에는 이걸 쓰자
 }
 
 function closeExerciseDetail() {
   detailScreen.style.display = 'none';
   exerciseScreen.style.display = 'block';
-
   currentExerciseName = null;
 }
 
@@ -1992,47 +1969,31 @@ function getToday() {
 
 
 
-
-
-
-
-
-
-   
 tabBtns.forEach(btn => {
-  btn.addEventListener('click', ()=>{
+  btn.addEventListener('click', () => {
     calPopup.classList.add("hidden");
 
-    tabBtns.forEach(b=>b.classList.remove('active'));
+    tabBtns.forEach(b => b.classList.remove('active'));
     btn.classList.add('active');
 
     const target = btn.dataset.target;
-    tabContents.forEach(tc=>{
-      if(tc.id === target){
-        tc.classList.add('active');
-        tc.style.display = 'block';
-      } else {
-        tc.classList.remove('active');
-        tc.style.display = 'none';
-      }
+    tabContents.forEach(tc => {
+      const on = (tc.id === target);
+      tc.classList.toggle('active', on);
+      tc.style.display = on ? 'block' : 'none';
     });
 
-    // 🔥 Tip 탭 초기화
-    if(target === 'tab4'){
+    // Tip 탭 초기화
+    if (target === 'tab4') {
       partScreen.style.display = 'block';
       exerciseScreen.style.display = 'none';
+      detailScreen.style.display = 'none'; // ✅ 추가: 디테일도 닫기
     } else {
-      // ✅ 탭4가 아닌 경우 보조운동 상세 화면 숨기기
-      document.getElementById('exercise-detail-screen').style.display = 'none';
+      detailScreen.style.display = 'none';
     }
   });
 });
-document.querySelectorAll('.delete-btn').forEach(btn => {
-  btn.addEventListener('click', (e) => {
-    const name = btn.closest('.exercise-card').id.replace('card-', '');
-    deleteExercise(name, e);
-  });
-});
+
 
 
 
@@ -2045,61 +2006,48 @@ document.querySelectorAll('.delete-btn').forEach(btn => {
 
 // 카드 렌더링
 function renderExercises() {
+  // ✅ 루프 전에 딱 1번만 정리
+  currentExercises = (currentExercises || [])
+    .filter(x => typeof x === 'string' && x.trim());
+
   if (!currentExercises.length) {
     exerciseListEl.innerHTML =
       `<div style="color:#777;font-size:13px;">아직 추가된 종목이 없습니다</div>`;
     return;
   }
 
-  // 기존 내용 초기화
   exerciseListEl.innerHTML = '';
 
-  // 카드 생성 + 클릭 이벤트 연결
-  currentExercises.forEach(item => {
-    const name = typeof item === 'string' ? item : (item.name || 'unknown');
-const safeId = `card-${name.replace(/\s+/g, '-')}`;
-currentExercises = currentExercises.filter(item => item && (typeof item === 'string' || item.name));
-
-
+  currentExercises.forEach(name => {
     const card = document.createElement('div');
     card.className = 'exercise-card';
-    card.id = safeId;
 
     card.innerHTML = `
       <div class="exercise-name">${name}</div>
       <div class="exercise-sub">${getAccessorySummary(name)}</div>
       <button class="delete-btn" aria-label="삭제">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2"
+             stroke-linecap="round" stroke-linejoin="round">
           <line x1="3" y1="4" x2="21" y2="4"></line>
-          <line x1="8" y1="4" x2="8" y2="2"></line>
-          <line x1="16" y1="4" x2="16" y2="2"></line>
-          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-          <line x1="8" y1="8" x2="8" y2="20"></line>
-          <line x1="12" y1="8" x2="12" y2="20"></line>
-          <line x1="16" y1="8" x2="16" y2="20"></line>
+          <rect x="6" y="6" width="12" height="14" rx="2"></rect>
+          <line x1="10" y1="10" x2="10" y2="18"></line>
+          <line x1="14" y1="10" x2="14" y2="18"></line>
         </svg>
       </button>
     `;
 
-    // 카드 클릭 시 입력창 열기
-    card.addEventListener('click', () => {
-      openExerciseDetail(name);
-    });
+    card.addEventListener('click', () => openExerciseDetail(name));
 
-    // 삭제 버튼 클릭
-    const delBtn = card.querySelector('.delete-btn');
-    if (delBtn) {
-      delBtn.addEventListener('click', (e) => {
-        e.stopPropagation(); // 카드 클릭 이벤트 방지
-        deleteExercise(name, e);
-      });
-    }
+    card.querySelector('.delete-btn').addEventListener('click', (e) => {
+      e.stopPropagation();
+      deleteExercise(name);
+    });
 
     exerciseListEl.appendChild(card);
   });
 }
 
-
+   
 
 
 async function deleteExercise(exerciseName) {
@@ -2108,6 +2056,7 @@ async function deleteExercise(exerciseName) {
   const user = auth.currentUser;
   if (!user) return;
 
+  // 1) accessoryRecords 삭제
   const snap = await db
     .collection('users')
     .doc(user.uid)
@@ -2119,9 +2068,27 @@ async function deleteExercise(exerciseName) {
   snap.forEach(doc => batch.delete(doc.ref));
   await batch.commit();
 
-  // 화면 갱신
-  await loadAccessoryRecords();
+  // 2) 현재 파트의 목록(list)에서도 제거
+  if (currentPart) {
+    currentExercises = (currentExercises || []).filter(n => n !== exerciseName);
+
+    await db
+      .collection('users')
+      .doc(user.uid)
+      .collection('accessories')
+      .doc(currentPart)
+      .set({ list: currentExercises }, { merge: true });
+  }
+
+  // 3) 화면 갱신
+  renderExercises();
+
+  // 디테일 열려있던 종목이면 닫기
+  if (currentExerciseName === exerciseName) closeExerciseDetail();
 }
+
+
+   
 
 async function loadAccessoryRecords() {
   const user = auth.currentUser;
@@ -2156,20 +2123,7 @@ async function loadAccessoryRecords() {
   }
 }
 
-// 카드 입력창 열기
-function openExerciseDetail(name) {
-  currentExerciseName = name;
 
-  if(!accRecordsByExercise[name]){
-      accRecordsByExercise[name] = [];
-  }
-
-  document.getElementById('exercise-screen').style.display = 'none';
-  document.getElementById('exercise-detail-screen').style.display = 'block';
-  document.getElementById('detail-exercise-name').textContent = name;
-
-  renderAccessoryRecords(); // 해당 종목 기록 렌더
-}
 
 
 
