--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,11 @@ await loadAccessoryRecords();  // ✅ 보조운동 기록 전체 로드
     googleLoginBtn.style.display = 'block';
     logoutBtn.style.display = 'none';
     userInfo.textContent = '';
+
+     accRecordsByExercise = {};
+currentExercises = [];
+renderExercises();
+
   }
 });
 
@@ -2127,20 +2132,6 @@ async function loadAccessoryRecords() {
 }
 
 
-
-
-
-// 종목 버튼 클릭 시 Firestore 불러오기
-partButtons.forEach(btn => {
-  btn.addEventListener('click', async () => {
-    currentPart = btn.dataset.part;
-    currentPartNameEl.textContent = currentPart;
-    partScreen.style.display = 'none';
-    exerciseScreen.style.display = 'block';
-    await loadExercises(currentPart); // 🔥 여기서 동기화
-  });
-});
-
 const backBtn = document.getElementById('exercise-back-btn'); // 뒤로가기 버튼 ID
 if (backBtn) {
     backBtn.addEventListener('click', closeExerciseDetail);
@@ -2211,6 +2202,52 @@ function getAccessorySummary(exerciseName) {
   return `${latest.weight}kg × ${latest.reps}회`;
 }
 
+async function addAccessorySet() {
+  const user = auth.currentUser;
+  if (!user) return alert("로그인 후 사용하세요.");
+
+  if (!currentExerciseName) return alert("종목을 먼저 선택하세요.");
+
+  const w = parseFloat(document.getElementById("acc-weight").value);
+  const r = parseInt(document.getElementById("acc-reps").value, 10);
+
+  if (!w || !r) return alert("kg / 회를 입력하세요.");
+
+  const item = {
+    exercise: currentExerciseName,
+    part: currentPart || "",
+    weight: w,
+    reps: r,
+    date: formatTodayYYMMDD(), // 너 기존 포맷 함수 그대로 사용
+    createdAt: firebase.firestore.FieldValue.serverTimestamp()
+  };
+
+  // 1) DB 저장
+  const docRef = await db
+    .collection("users")
+    .doc(user.uid)
+    .collection("accessoryRecords")
+    .add(item);
+
+  // 2) 로컬 반영 (createdAt은 즉시 숫자로 만들어서 정렬용)
+  const localItem = {
+    id: docRef.id,
+    ...item,
+    createdAt: Date.now()
+  };
+
+  if (!accRecordsByExercise[currentExerciseName]) {
+    accRecordsByExercise[currentExerciseName] = [];
+  }
+  accRecordsByExercise[currentExerciseName].push(localItem);
+
+  // 3) 화면 갱신
+  document.getElementById("acc-weight").value = "";
+  document.getElementById("acc-reps").value = "";
+
+  renderAccessoryRecords(currentExerciseName);
+  renderExercises(); // 카드 서브텍스트 최신 기록 반영
+}
 
 
 
