--- a/index.html
+++ b/index.html
@@ -672,6 +672,12 @@ cursor: pointer;
 }
 
 
+/* 보조운동 기록 세트 글자 */
+.record-set {
+  font-size: 14.5px;     /* 기존 13px 정도 → 살짝 업 */
+  line-height: 1.7;      /* 숨 좀 쉬게 */
+  font-weight: 500;      /* 너무 굵지 않게 */
+}
 
 
 
