--- a/index.html
+++ b/index.html
@@ -756,8 +756,97 @@ cursor: pointer;
   background: #FFD700;
 }
 
+.settings-btn {
+  background: none;
+  border: none;
+  color: #ddd;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 6px;
+}
 
+.settings-btn:active {
+  transform: scale(0.92);
+}
 
+#googleLoginBtn,
+#logoutBtn,
+#userInfo {
+  display: none !important;
+}
+
+.settings-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  z-index: 100000;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.settings-overlay.hidden {
+  display: none;
+}
+
+.settings-panel {
+  width: 82%;
+  max-width: 320px;
+  height: 100%;
+  background: #111;
+  padding: 20px;
+  box-sizing: border-box;
+
+  transform: translateX(100%);
+  animation: slideIn 0.25s ease forwards;
+}
+
+@keyframes slideIn {
+  to { transform: translateX(0); }
+}
+
+/* 헤더 */
+.settings-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.settings-name {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.settings-email {
+  font-size: 12px;
+  color: #777;
+}
+
+/* 리스트 */
+.settings-list {
+  border-top: 1px solid #222;
+}
+
+.settings-item {
+  padding: 14px 0;
+  border-bottom: 1px solid #222;
+  font-size: 14px;
+}
+
+.settings-item.muted {
+  color: #777;
+}
+
+/* 로그아웃 */
+.settings-logout {
+  margin-top: auto;
+  background: none;
+  border: 1px solid #333;
+  color: #aaa;
+  padding: 10px;
+  width: 100%;
+  border-radius: 8px;
+}
 
    
    
@@ -882,11 +971,16 @@ input[type="number"] {
          <div>그 외의 문제는 근육이 없어서 생긴다</div>
        </div>
     <!-- 오른쪽 로그인 영역 -->
-       <div id="loginArea">
-             <button id="googleLoginBtn" class="loginBtn">Google 로그인</button>
-            <button id="logoutBtn" class="loginBtn" style="display:none;">로그아웃</button>
-       <div id="userInfo"></div>
-    </div>
+       <div class="topBar">
+  <div class="topText">
+    <div>대부분의 문제는 돈이 없어서,</div>
+    <div>그 외의 문제는 근육이 없어서 생긴다</div>
+  </div>
+
+  <!-- 설정 버튼 -->
+  <button id="openSettingsBtn" class="settings-btn">⚙️</button>
+</div>
+
   </div>   
 
 
@@ -1064,6 +1158,29 @@ input[type="number"] {
     </div>
 </div>
 
+<div id="settingsOverlay" class="settings-overlay hidden">
+  <div class="settings-panel">
+    
+    <!-- 헤더 -->
+    <div class="settings-header">
+      <div>
+        <div id="settingsUserName" class="settings-name">게스트</div>
+        <div id="settingsUserEmail" class="settings-email"></div>
+      </div>
+      <button id="closeSettingsBtn">✕</button>
+    </div>
+
+    <!-- 메뉴 -->
+    <div class="settings-list">
+      <div class="settings-item">문의</div>
+      <div class="settings-item muted">김무진한테 문의하세요</div>
+    </div>
+
+    <!-- 하단 -->
+    <button id="settingsLogoutBtn" class="settings-logout">로그아웃</button>
+
+  </div>
+</div>
 
 
 <!-- 로그인 -->
@@ -2571,7 +2688,45 @@ async function deleteAccessoryRecord(recordId) {
   renderExercises();
 }
 
+const openSettingsBtn = document.getElementById("openSettingsBtn");
+const closeSettingsBtn = document.getElementById("closeSettingsBtn");
+const settingsOverlay = document.getElementById("settingsOverlay");
 
+openSettingsBtn.addEventListener("click", () => {
+  settingsOverlay.classList.remove("hidden");
+});
+
+closeSettingsBtn.addEventListener("click", () => {
+  settingsOverlay.classList.add("hidden");
+});
+
+// 바깥 클릭 시 닫기
+settingsOverlay.addEventListener("click", (e) => {
+  if (e.target === settingsOverlay) {
+    settingsOverlay.classList.add("hidden");
+  }
+});
+
+const settingsUserName = document.getElementById("settingsUserName");
+const settingsUserEmail = document.getElementById("settingsUserEmail");
+const settingsLogoutBtn = document.getElementById("settingsLogoutBtn");
+
+auth.onAuthStateChanged(user => {
+  if (user) {
+    settingsUserName.textContent = user.displayName || "사용자";
+    settingsUserEmail.textContent = user.email || "";
+    settingsLogoutBtn.style.display = "block";
+  } else {
+    settingsUserName.textContent = "게스트";
+    settingsUserEmail.textContent = "로그인하지 않음";
+    settingsLogoutBtn.style.display = "none";
+  }
+});
+
+settingsLogoutBtn.addEventListener("click", () => {
+  auth.signOut();
+  settingsOverlay.classList.add("hidden");
+});
 
 </script>
 <!-- ⚠️ 여기 아래에 네가 쓰던 JS ㅓㄴ 그대로 유지 -->
