--- a/index.html
+++ b/index.html
@@ -265,9 +265,7 @@ td, th {
 }
 
 /* 일요일 빨간 포인트 */
-.weekdays div:last-child {
-    color: #8b0000;
-}
+.weekdays div:first-child { color: #8b0000; }
 
    /* ===== 날짜 그리드 ===== */
 .days {
