--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ td, th {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding: 12px 14px;
+  padding: 12px 10px;   /* 14 → 10 (오른쪽 더 붙음) */
 }
+
 
    .topText {
   color: white;
