--- a/index.html
+++ b/index.html
@@ -755,12 +755,19 @@ cursor: pointer;
 }
 
 .settings-btn {
-  background: none;
-  border: none;
+  all: unset;              /* 🔥 기본 button 스타일 전부 제거 */
+  width: 24px;             /* 클릭 영역 */
+  height: 24px;
+
+  font-size: 16px;         /* 아이콘 크기 */
+  line-height: 1;
+
   color: #ddd;
-  font-size: 18px;
   cursor: pointer;
-  padding: 6px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .settings-btn:active {
